--- a/src/style.css
+++ b/src/style.css
@@ -106,6 +106,12 @@
     justify-content: flex-end;
 }
   
-  
+/*------------menu styling -------------*/
+#first{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
   
 
